--- a/android/app/src/main/res/layout/activity_main.xml
+++ b/android/app/src/main/res/layout/activity_main.xml
@@ -15,4 +15,17 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        android:width="150dp"
+        android:background="@color/colorPrimaryDark"
+        android:text="Go to step 2"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="117dp"
+        tools:layout_editor_absoluteY="287dp"
+        android:textColor="#ccc"
+        android:id="@+id/btn"
+        />
+
 </android.support.constraint.ConstraintLayout>
